--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ select {
     header {
         background-image: url(images/IMG_7873.PNG);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: auto;
         background-position: left;
         padding: 0;
     }
@@ -558,11 +558,11 @@ select {
     }
 
     .hair-header img {
-        width: 370px;
+        width: 610px;
     }
 
     .hair {
-        width: 370px;
+        width: 610px;
     }
 }
 
